--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-  
+<link rel="stylesheet" type="text/css" href="styles.css">  
     <body class="not-loaded">
         <div class="night"></div>
         <div class="flowers">
